[package]
name = "socks5-whitelist-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.98"

socket2 = { version = "0.5", features = ["all"] }
libc = "0.2.141"


sysctl = { version = "0.5" } # macOS
libproc = { version = "0.14" } # macOS


[target.'cfg(macos)'.dependencies]
libproc = { version = "0.14" } # macOS
sysctl = { version = "0.6" } # macOS

[target.'cfg(linux)'.dependencies]
netlink-packet-core = "0.7"
netlink-packet-sock-diag = "0.4"
netlink-sys = {version = "0.8",features = ["tokio_socket"] }


[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_ProcessStatus",
] }


#[build-dependencies]
#windows = "0.52"

[dev-dependencies]
tokio-test = "0.4"