[package]
name = "network-utils"
version = "0.1.0"
edition = "2024"
description = "A library for identifying processes associated with network connections on Windows, macOS, and Linux"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/network-sys"
keywords = ["network", "process", "identification", "socks5"]
categories = ["network-programming", "os"]
documentation = "https://docs.rs/network-utils"

[[example]]
name = "process_test"
path = "examples/process_test.rs"

[dependencies]
thiserror = "2.0.12"


[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
libproc = { version = "0.14" } # macOS and Linux
libc = "0.2.141"

[target.'cfg(macos)'.dependencies]
sysctl = { version = "0.6" } # macOS

[target.'cfg(linux)'.dependencies]
netlink-packet-core = "0.7"
netlink-packet-sock-diag = "0.4"
netlink-sys = { version = "0.8", features = ["tokio_socket"] }
rayon = "1.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_ProcessStatus",
] }



[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.98"


[target.'cfg(target_os = "windows")'.build-dependencies]
windows = "0.52"

