[package]
name = "network-utils"
version = "0.1.0"
edition = "2024"
description = "A library for identifying processes associated with network connections on Windows, macOS, and Linux"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zouwuzhi/network-utils"
keywords = ["network", "process", "identification", "socks5"]
categories = ["network-programming", "os"]
documentation = "https://docs.rs/network-utils"

[[example]]
name = "process_test"
path = "examples/process_test.rs"

[dependencies]
thiserror = "2.0.12"


[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
libproc = { version = "0.14" } # macOS and Linux
libc = "0.2.141"

[target.'cfg(target_os = "macos")'.dependencies]
sysctl = { version = "0.6" } # macOS

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-core = "0.7"
netlink-packet-sock-diag = "0.4"
netlink-sys = { version = "0.8" }
rayon = "1.8"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_ProcessStatus",
] }



[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.98"




